--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 		--sb-track-color: #ffffff;
 		--sb-thumb-color: #a59d84;
 		--sb-size: 9px;
-    @apply overflow-x-hidden
+		@apply overflow-x-hidden relative;
 	}
 
 	body::-webkit-scrollbar {
